finished desktop version of about section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- header -->
     <header class="banner">
       <nav class="banner-nav container-alt">
         <a class="logo" href="#">FoodieOn</a>
@@ -54,5 +55,26 @@
         <div class="circle" data-slide="3"></div>
       </div>
     </header>
+    <!-- header -->
+
+    <!-- about -->
+    <section class="about">
+      <div class="container">
+        <div class="about-card">
+          <h2 class="about-card-title">Our story</h2>
+          <p>
+            We started out as a Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Necessitatibus enim tenetur delectus laudantium
+            iusto ad praesentium blanditiis velit veniam a!
+          </p>
+          <a class="about-link" href="#"
+            >read more <i class="fa-solid fa-chevron-right"></i
+          ></a>
+        </div>
+        <div class="about-card about-card-2"></div>
+        <div class="about-card about-card-3"></div>
+      </div>
+    </section>
+    <!-- about -->
   </body>
 </html>
