changed about link, and added about ID

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav class="banner-nav container-alt">
         <a class="logo" href="#">FoodieOn</a>
         <ul class="banner-list">
-          <li class="banner-list-item"><a href="#">welcome</a></li>
+          <li class="banner-list-item"><a href="#about">about</a></li>
           <li class="banner-list-item"><a href="#">Menu</a></li>
           <li class="banner-list-item"><a href="#">Reservations</a></li>
           <li class="banner-list-item"><a href="#">Events</a></li>
@@ -58,7 +58,7 @@
     <!-- header -->
 
     <!-- about -->
-    <section class="about">
+    <section id="about" class="about">
       <div class="container">
         <div class="about-card">
           <h2 class="about-card-title">Our story</h2>
