added images for the services section and styled the desktop version

--- a/index.html
+++ b/index.html
@@ -76,5 +76,53 @@
       </div>
     </section>
     <!-- about -->
+
+    <!-- services -->
+    <section class="services" id="services">
+      <div class="container">
+        <div class="services-heading">
+          <h2 class="section-title">Our Services</h2>
+          <p>We provide unparalleled experiences, unmatched prices</p>
+        </div>
+
+        <div class="services-boxes">
+          <div class="services-box">
+            <div>
+              <a href="#">read more</a>
+
+              <img
+                src="./images/services-catering-not-resized.jpg"
+                alt="food catering"
+              />
+            </div>
+
+            <h3 class="services-title">Catering</h3>
+          </div>
+          <div class="services-box">
+            <div>
+              <a href="#">read more</a>
+              <img
+                src="./images/services-wedding-not-resized.jpg"
+                alt="a nicely decorated venue"
+              />
+            </div>
+
+            <h3 class="services-title">Weddings</h3>
+          </div>
+          <div class="services-box">
+            <div>
+              <a href="#">read more</a>
+              <img
+                src="./images/services-social-not-resized.jpg"
+                alt="a group of people at a restaurant"
+              />
+            </div>
+
+            <h3 class="services-title">Social Events</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- services -->
   </body>
 </html>
