added images, styled specials section for desktop

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         <a class="logo" href="#">FoodieOn</a>
         <ul class="banner-list">
           <li class="banner-list-item"><a href="#about">about</a></li>
-          <li class="banner-list-item"><a href="#">Menu</a></li>
-          <li class="banner-list-item"><a href="#">Reservations</a></li>
+          <li class="banner-list-item"><a href="#services">services</a></li>
+          <li class="banner-list-item"><a href="#specials">services</a></li>
+          <li class="banner-list-item"><a href="#menu">menu</a></li>
           <li class="banner-list-item"><a href="#">Events</a></li>
           <li class="banner-list-item"><a href="#">Find us</a></li>
           <li class="banner-list-item banner-icon-1">
@@ -124,5 +125,74 @@
       </div>
     </section>
     <!-- services -->
+
+    <!-- menu -->
+    <section id="specials" class="specials">
+      <div class="container">
+        <h2 class="section-title">Our Specials</h2>
+
+        <div class="specials-boxes">
+          <div class="specials-box specials-box-text">
+            <i class="fa-solid fa-cake-candles"></i>
+            <h3>Fine desserts</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Distinctio, suscipit? Animi!
+            </p>
+
+            <a href="" class="specials-link">see more</a>
+          </div>
+          <div class="specials-box">
+            <img src="./images/menu-food-4-not-resized.jpg" alt="a dessert" />
+          </div>
+          <div class="specials-box">
+            <img src="./images/menu-cookie-not-resized.jpg" alt="cookies" />
+          </div>
+          <div class="specials-box specials-box-text">
+            <i class="fa-solid fa-plate-wheat"></i>
+            <h3>Gluten free</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <a class="specials-link" href="#">see more</a>
+          </div>
+          <div class="specials-box">
+            <img src="./images/menu-rice-not-resized.jpg" alt="brown rice" />
+          </div>
+          <div class="specials-box">
+            <img src="./images/menu-food-1-not-resized.jpg" alt="" />
+          </div>
+          <div class="specials-box">
+            <img src="./images/menu-food-2-not-resized.jpg" alt="" />
+          </div>
+          <div class="specials-box specials-box-text">
+            <i class="fa-solid fa-utensils"></i>
+            <h3>Ready to eat</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <a class="specials-link" href="#">see more</a>
+          </div>
+          <div class="specials-box">
+            <img src="./images/menu-food-3-not-resized.jpg" alt="" />
+          </div>
+          <div class="specials-box">
+            <img src="./images/menu-food-5-not-resized.jpg" alt="" />
+          </div>
+          <div class="specials-box specials-box-text">
+            <i class="fa-solid fa-location-dot"></i>
+            <h3>Locally Sourced</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Doloremque, nihil.
+            </p>
+            <a class="specials-link" href="#">see more</a>
+          </div>
+          <div class="specials-box">
+            <img
+              src="./images/menu-market-not-resized.jpg"
+              alt="farmers market"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- menu -->
   </body>
 </html>
