added styles for the menu section, desktop version

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </section>
     <!-- services -->
 
-    <!-- menu -->
+    <!-- specials -->
     <section id="specials" class="specials">
       <div class="container">
         <h2 class="section-title">Our Specials</h2>
@@ -191,6 +191,93 @@
             />
           </div>
         </div>
+      </div>
+    </section>
+    <!-- specials -->
+
+    <!-- menu -->
+    <section class="menu" id="menu">
+      <div class="container">
+        <h2 class="section-title">Our Menu</h2>
+        <div class="menu-list">
+          <li class="menu-list-item">
+            <div>
+              <h3 class="menu-list-title">Eggplant Rollatini</h3>
+              <p class="menu-item-description">
+                Eggplant, ricotta, parmesan tomato sauce
+              </p>
+            </div>
+
+            <p class="menu-price">$20</p>
+          </li>
+          <li class="menu-list-item">
+            <div>
+              <h3 class="menu-list-title">chicken piccata meatballs</h3>
+              <p class="menu-item-description">ground chicken, capers, lemon</p>
+            </div>
+
+            <p class="menu-price">$17</p>
+          </li>
+          <li class="menu-list-item">
+            <div>
+              <h3 class="menu-list-title">Steak salad with gorgonzola</h3>
+              <p class="menu-item-description">
+                new york strip steak, mixed greens, corn, cheese
+              </p>
+            </div>
+
+            <p class="menu-price">$23</p>
+          </li>
+          <li class="menu-list-item">
+            <div>
+              <h3 class="menu-list-title">cannellini bean soup</h3>
+              <p class="menu-item-description">
+                cannellini beans, corn, carrots broth
+              </p>
+            </div>
+
+            <p class="menu-price">$20</p>
+          </li>
+          <li class="menu-list-item">
+            <div>
+              <h3 class="menu-list-title">Steak salad with gorgonzola</h3>
+              <p class="menu-item-description">
+                new york strip steak, mixed greens, corn, cheese
+              </p>
+            </div>
+
+            <p class="menu-price">$20</p>
+          </li>
+          <li class="menu-list-item">
+            <div>
+              <h3 class="menu-list-title">chicken piccata meatballs</h3>
+              <p class="menu-item-description">ground chicken, capers, lemon</p>
+            </div>
+
+            <p class="menu-price">$20</p>
+          </li>
+          <li class="menu-list-item">
+            <div>
+              <h3 class="menu-list-title">Eggplant Rollatini</h3>
+              <p class="menu-item-description">
+                Eggplant, ricotta, parmesan tomato sauce
+              </p>
+            </div>
+
+            <p class="menu-price">$20</p>
+          </li>
+          <li class="menu-list-item">
+            <div>
+              <h3 class="menu-list-title">cannellini bean soup</h3>
+              <p class="menu-item-description">
+                cannellini beans, corn, carrots broth
+              </p>
+            </div>
+
+            <p class="menu-price">$20</p>
+          </li>
+        </div>
+        <button class="menu-btn">See full menu</button>
       </div>
     </section>
     <!-- menu -->
