finished the booking section, footer, desktop styles complete, site is not mobile, images are not reduced

--- a/index.html
+++ b/index.html
@@ -310,10 +310,16 @@
             />
           </div>
 
-          <input type="submit" placeholder="Find table" value="Find Table" />
+          <button class="book-btn">Find table</button>
         </form>
       </div>
     </section>
     <!-- book table -->
+
+    <footer>
+      <div class="container">
+        <p><small>All rights reserved. &copy; 2023. FoodieOn</small></p>
+      </div>
+    </footer>
   </body>
 </html>
